frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frontend.onprem.cloudcomputingassociates.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls:                                # add next 4 lines for TLS on ingress
    - hosts:                            
      - frontend.onprem.cloudcomputingassociates.net
      secretName: ingress-tls           # Did you create your secret?
